--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Microposts</h1>
-
-<table>
+<h2>Microposts</h2>
+<div class="container">
+<table class= "table table-striped">
   <thead>
     <tr>
       <th>Content</th>
@@ -16,14 +16,14 @@
       <tr>
         <td><%= micropost.content %></td>
         <td><%= micropost.user_id %></td>
-        <td><%= link_to 'Show', micropost %></td>
-        <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', micropost, :class => "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_micropost_path(micropost), :class => "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', micropost, :class => "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
-<%= link_to 'New Micropost', new_micropost_path %>
+<%= link_to 'New Micropost', new_micropost_path,:class => "btn btn-default" %>
