--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,18 +10,19 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+<form>
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class: "form-control" %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Create, class: "btn btn-info" %>
   </div>
+  </form>
 <% end %>
