--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,21 @@
 <p id="notice"><%= notice %></p>
-
+  <div class = "panel-default">
+    <div class ="panel-heading">
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
 </p>
-
+</div>
+<div class = "panel-body">
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+</div>
+
+<div class ="panel-footer">
+<%= link_to 'Edit', edit_user_path(@user),:class => "btn btn-primary" %> |
+<%= link_to 'Back', users_path, :class => "btn btn-danger" %>
+</div>
+</div>
